--- a/blog.html
+++ b/blog.html
@@ -89,20 +89,61 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </div>
 </div>
 <div class="col-lg-7">
-<nav class="header__menu mobile-menu">
+    <nav class="header__menu mobile-menu">
 <ul>
-<li><a href="./index.html">Home</a></li>
-<li><a href="./services.html">Services</a></li>
-<li><a href="./about.html">About</a></li>
-<li><a href="#">Pages</a>
+<li class="active"><a href="./index.html">Home</a></li>
+<li><a href="./about.html">About Us</a></li>
+<li><a href="./services.html">Services</a>
 <ul class="dropdown">
-<li><a href="./about.html">About</a></li>
-<li><a href="./services-details.html">Services Details</a></li>
-<li><a href="./blog-details.html">Blog Details</a></li>
+<li><a href="./about.html">Elderly Transportation</a></li>
+<li><a href="./services-details.html">Bed to Bed Transportation</a></li>
+<li><a href="./blog-details.html">Strecher Transport</a></li>
+<li><a href="./about.html">Non-Emergency Medical Transportation</a></li>
+<li><a href="./about.html">Wheelchair Transportation</a></li>
+<li><a href="./about.html">Special Tips</a></li>
+<li><a href="./about.html">Ambulatory Transport</a></li>
+<li><a href="./about.html">Long Distance Transportation</a></li>
+<li><a href="./about.html">Bariatric Transportation</a></li>
+
 </ul>
 </li>
-<li class="active"><a href="./blog.html">Blog</a></li>
-<li><a href="./contact.html">Contacts</a></li>
+<li><a href="#">Testinomials</a>
+<ul class="dropdown">
+<li><a href="./Feedback.html">Feedback Survey</a></li>
+</ul>
+</li>
+<li><a href="./discount.html">Discounts</a></li>
+<li><a href="#">Service Areas</a>
+<ul class="dropdown">
+<li><a href="./about.html">Ashburn VA</a></li>
+<li><a href="./services-details.html">Dumfries VA</a></li>
+<li><a href="./blog-details.html">Fairfax VA</a></li>
+<li><a href="./blog-details.html">Herndon VA</a></li>
+<li><a href="./blog-details.html">Leesburg VA</a></li>
+<li><a href="./blog-details.html">Manassas VA</a></li>
+<li><a href="./blog-details.html">Sterling VA</a></li>
+<li><a href="./blog-details.html">Alexandria VA</a></li>
+<li><a href="./blog-details.html">Annandale VA</a></li>
+<li><a href="./blog-details.html">Arlington VA</a></li>
+<li><a href="./blog-details.html">Bristow VA</a></li>
+<li><a href="./blog-details.html">Burke VA</a></li>
+<li><a href="./blog-details.html">Centreville VA</a></li>
+<li><a href="./blog-details.html">Chantilly VA</a></li>
+<li><a href="./blog-details.html">Falls Church VA</a></li>
+<li><a href="./blog-details.html">Fredrickburg VA</a></li>
+<li><a href="./blog-details.html">Gainesville VA</a></li>
+<li><a href="./blog-details.html">Mc Lean VA</a></li>
+<li><a href="./blog-details.html">Reston VA</a></li>
+<li><a href="./blog-details.html">Springfield</a></li>
+<li><a href="./blog-details.html">Stafford VA</a></li>
+<li><a href="./blog-details.html">Vienna VA</a></li>
+<li><a href="./blog-details.html">Woodbridge VA</a></li>
+</ul>
+</li>
+<!--<li><a href="./fleet.html">Our Fleet</a></li>-->
+<li><a href="./career.html">Career</a></li>
+<li><a href="./contact.html">Booking</a></li>
+<!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
 </div>
