--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="row">
 <div class="col-lg-2">
 <div class="header__logo">
-<a href="./index.html"><img src="img/logo.png" alt="" style="height: 150px;"></a>
+<a href="./index.html"><img src="img/logo.png" alt="" style="height: 50px;"></a>
 </div>
 </div>
 <div class="col-lg-10" style="padding-left: 100px;">
@@ -84,9 +84,16 @@
 <li><a href="./about.html">About Us</a></li>
 <li><a href="./services.html">Services</a>
 <ul class="dropdown">
-<li><a href="./about.html">About</a></li>
-<li><a href="./services-details.html">Services Details</a></li>
-<li><a href="./blog-details.html">Blog Details</a></li>
+<li><a href="./about.html">Elderly Transportation</a></li>
+<li><a href="./services-details.html">Bed to Bed Transportation</a></li>
+<li><a href="./blog-details.html">Strecher Transport</a></li>
+<li><a href="./about.html">Non-Emergency Medical Transportation</a></li>
+<li><a href="./about.html">Wheelchair Transportation</a></li>
+<li><a href="./about.html">Special Tips</a></li>
+<li><a href="./about.html">Ambulatory Transport</a></li>
+<li><a href="./about.html">Long Distance Transportation</a></li>
+<li><a href="./about.html">Bariatric Transportation</a></li>
+
 </ul>
 </li>
 <li><a href="#">Testinomials</a>
@@ -97,15 +104,35 @@
 <li><a href="./discount.html">Discounts</a></li>
 <li><a href="#">Service Areas</a>
 <ul class="dropdown">
-<li><a href="./about.html">About</a></li>
-<li><a href="./services-details.html">Services Details</a></li>
-<li><a href="./blog-details.html">Blog Details</a></li>
+<li><a href="./about.html">Ashburn VA</a></li>
+<li><a href="./services-details.html">Dumfries VA</a></li>
+<li><a href="./blog-details.html">Fairfax VA</a></li>
+<li><a href="./blog-details.html">Herndon VA</a></li>
+<li><a href="./blog-details.html">Leesburg VA</a></li>
+<li><a href="./blog-details.html">Manassas VA</a></li>
+<li><a href="./blog-details.html">Sterling VA</a></li>
+<li><a href="./blog-details.html">Alexandria VA</a></li>
+<li><a href="./blog-details.html">Annandale VA</a></li>
+<li><a href="./blog-details.html">Arlington VA</a></li>
+<li><a href="./blog-details.html">Bristow VA</a></li>
+<li><a href="./blog-details.html">Burke VA</a></li>
+<li><a href="./blog-details.html">Centreville VA</a></li>
+<li><a href="./blog-details.html">Chantilly VA</a></li>
+<li><a href="./blog-details.html">Falls Church VA</a></li>
+<li><a href="./blog-details.html">Fredrickburg VA</a></li>
+<li><a href="./blog-details.html">Gainesville VA</a></li>
+<li><a href="./blog-details.html">Mc Lean VA</a></li>
+<li><a href="./blog-details.html">Reston VA</a></li>
+<li><a href="./blog-details.html">Springfield</a></li>
+<li><a href="./blog-details.html">Stafford VA</a></li>
+<li><a href="./blog-details.html">Vienna VA</a></li>
+<li><a href="./blog-details.html">Woodbridge VA</a></li>
 </ul>
 </li>
-<li><a href="./fleet.html">Our Fleet</a></li>
+<!--<li><a href="./fleet.html">Our Fleet</a></li>-->
 <li><a href="./career.html">Career</a></li>
 <li><a href="./contact.html">Booking</a></li>
-<li><a href="#">Brochure</a></li>
+<!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
 </div>
@@ -157,8 +184,7 @@ have improved bottom lines across virtually every industry.</p>
 <img src="img/services/si-1.png" alt="">
 </div>
 <h5>Wheelchair Transport</h5>
-<p>Investment Assets Properties have ready several locations around the world to take your free
-listings for any luxury property you have.</p>
+<p>Individuals who need direct assistance with transportation, are in wheelchairs, and have special requirements use wheelchair transportation. Although we do the grunt work, our clients can concentrate on what matters most to them!</p>
 <a href="#">Read More</a>
 </div>
 </div>
@@ -171,8 +197,7 @@ listings for any luxury property you have.</p>
 <img src="img/services/si-2.png" alt="">
 </div>
 <h5>Strecher Transport</h5>
-<p>Investment Assets Properties have ready several locations around the world to take your free
-listings for any luxury property you have.</p>
+<p>VA Transportation Healthcare has more than 10 years experience in non-emergency medical stretcher transportation services. We include premier medical transportation services that meet the highest industry standards.</p>
 <a href="#">Read More</a>
 </div>
 </div>
@@ -185,8 +210,7 @@ listings for any luxury property you have.</p>
 <img src="img/services/si-3.png" alt="">
 </div>
 <h5>Ambulatory Transport</h5>
-<p>Investment Assets Properties have ready several locations around the world to take your free
-listings for any luxury property you have.</p>
+<p>Non emergency ambulatory transportation services play a vital role in ensuring efficient and reliable transportation for individuals requiring medical assistance.</p>
 <a href="#">Read More</a>
 </div>
 </div>
@@ -199,8 +223,7 @@ listings for any luxury property you have.</p>
 <img src="img/services/si-4.png" alt="">
 </div>
 <h5>Stair-Lifter Chair</h5>
-<p>Investment Assets Properties have ready several locations around the world to take your free
-listings for any luxury property you have.</p>
+<p>Hands that are special Individuals who are bed ridden due to illness or accident can use Non-Emergency Medical Transportation’s bed to bed transportation service.</p>
 <a href="#">Read More</a>
 </div>
 </div>
@@ -271,7 +294,7 @@ ut labore et dolore magna aliqua.</p>
 <a href="#"><img src="img/about/partner-3.png" alt=""></a>
 </div>
 <div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-4.JPEG" alt=""></a>
+<a href="#"><img src="img/about/partner-4.jpeg" alt=""></a>
 </div>
 <div class="partner__logo__item">
 <a href="#"><img src="img/about/partner-5.png" alt=""></a>
@@ -283,7 +306,7 @@ ut labore et dolore magna aliqua.</p>
 <a href="#"><img src="img/about/partner-7.png" alt=""></a>
 </div>
 <div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-8.png" alt=""></a>
+<a href="#"><img src="img/about/partner-8.jpeg" alt=""></a>
 </div>
 </div>
 </div>
@@ -351,7 +374,10 @@ ut labore et dolore magna aliqua.</p>
 </div>
 </div>
 </div>
-<div class="chooseus__pic set-bg" data-setbg="img/chooseus/chooseus-pic.jpg"></div>
+<!-- <div class="chooseus__pic set-bg" data-setbg="img/chooseus/chooseus-pic.jpg"></div> -->
+<div class="chooseus__pic set-bg col-lg-6">
+    <iframe width="670" height="400" src="https://www.youtube.com/embed/wb8zuCaEIz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
 </div>
 </section>
 
@@ -532,7 +558,8 @@ your free listings for any luxury property you have.</p>
 <div class="latest__item__pic set-bg" data-setbg="img/latest/latest-1.jpg">
 <div class="latest__item__pic__inner">
 <div class="label"><span>Guides</span></div>
-<h5>Expert Tips for Managing Hypoglycemia Lorem ipsum dolor</h5>
+<h5>"Unlocking Mobility: Exploring the Power of NEMT Services for Enhanced Healthcare Access" 1
+"UNLOCKING MOBILITY: EXPLORING THE POWER OF NEMT SERVICES FOR ENHANCED HEALTHCARE ACCESS"</h5>
 </div>
 </div>
 <div class="latest__item__text">
@@ -552,7 +579,7 @@ be a result</p>
 <div class="latest__item__pic set-bg" data-setbg="img/latest/latest-2.avif">
 <div class="latest__item__pic__inner">
 <div class="label"><span>Guides</span></div>
-<h5>Expert Tips for Managing Hypoglycemia Lorem ipsum dolor</h5>
+<h5>HOW MEDICAL & NON-MEDICAL TRANSPORTATION HELPED PEOPLE IN RECENT YEARS</h5>
 </div>
 </div>
 <div class="latest__item__text">
@@ -572,7 +599,7 @@ be a result</p>
 <div class="latest__item__pic set-bg" data-setbg="img/latest/latest-3.avif">
 <div class="latest__item__pic__inner">
 <div class="label"><span>Guides</span></div>
-<h5>Expert Tips for Managing Hypoglycemia Lorem ipsum dolor</h5>
+<h5>HOW TRANSPORTATION IMPACTS HEALTHCARE: EXPLORING THE CONNECTION</h5>
 </div>
 </div>
 <div class="latest__item__text">
@@ -591,6 +618,18 @@ be a result</p>
 </div>
 </section>
 
+<section class="latest spad">
+    <div class="container">
+<div class="row">
+<div class="col-lg-12">
+<div class="contact__map">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49116.39176087041!2d-86.41867791216099!3d39.69977417971648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ca48c841038a1%3A0x70cfba96bf847f0!2sPlainfield%2C%20IN%2C%20USA!5e0!3m2!1sen!2sbd!4v1586106673811!5m2!1sen!2sbd" height="460" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</div>
+</div>
+</div>
+</div>
+</section>
+
 
 <footer class="footer">
 <div class="container">
@@ -598,7 +637,7 @@ be a result</p>
 <div class="col-lg-4 col-md-6 col-sm-6">
 <div class="footer__about">
 <div class="footer__logo">
-<a href="#"><img src="img/footer-logo.png" alt=""></a>
+<a href="/index.html"><img src="img/logo.png" alt="" style="height: 150px;"></a>
 </div>
 <p>Consectetur adipiscing elit, sed do eiusmod tempor labore et dolore magna aliqua. Quis ipsum
 suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
@@ -615,31 +654,33 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 <div class="footer__widget">
 <h5>Quick links</h5>
 <ul>
-<li><a href="#">History</a></li>
-<li><a href="#">Our Staff</a></li>
-<li><a href="#">Our Partners</a></li>
-<li><a href="#">Blog</a></li>
+<li><a href="/contact.html">Bookings</a></li>
+<li><a href="/services.html">Our Services</a></li>
+<li><a href="/fleet.html">Our Fleet</a></li>
+<li><a href="/blog.html">Blog</a></li>
+<li><a href="#">Brochure</a></li>
 </ul>
 </div>
 </div>
  <div class="col-lg-2 col-md-6 col-sm-6">
 <div class="footer__widget">
-<h5>Services</h5>
+<h5>Interesting Infos</h5>
 <ul>
-<li><a href="#">Air Shipping</a></li>
-<li><a href="#">Expert Staff</a></li>
+<li><p style="color: gainsboro;">We are commited to providing High Quality Service to our customers through out virginia, maryland and washington DC metro areas.</p></li>
+<!--<li><a href="#">Expert Staff</a></li>
 <li><a href="#">Ground Shipping</a></li>
-<li><a href="#">Logistic Services</a></li>
+<li><a href="#">Logistic Services</a></li>-->
 </ul>
 </div>
 </div>
 <div class="col-lg-3 col-md-6 col-sm-6">
 <div class="footer__widget">
-<h5>Contacts</h5>
+<h5>VA Transportation HEALTHCARE</h5>
 <ul class="address">
-<li><span class="icon_pin"></span> 450 Strand, Charing Cross, US</li>
-<li><span class="icon_phone"></span> +44 20 7930 8205</li>
+<li><span class="icon_pin"></span> 8802 sudley road MANASSAS VA 20110</li>
+<li><span class="icon_phone"></span> +1 571 450 1300</li>
 <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">[email&#160;protected]</a></li>
+<li><p style="color: gainsboro;">DMV Certificate #601</p></li>
 </ul>
 </div>
 </div>
@@ -651,15 +692,18 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 <div class="col-lg-9 col-md-8">
 <div class="footer__copyright__text">
 
-<p>Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" rel="nofollow noopener">Colorlib</a>
+<p>Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All Rights Reserved | <a href="https://colorlib.com" target="_blank" rel="nofollow noopener">Privacy Policy</a> | <a href="https://colorlib.com" target="_blank" rel="nofollow noopener">Refund Policy</a>
 </p>
-
 </div>
 </div>
 <div class="col-lg-3 col-md-4">
 <div class="footer__copyright__links">
-<a href="#">Client Login</a>
-<a href="#">Join Team</a>
+    <div class="offcanvas__social">
+<a href="#"><span class="social_facebook"></span></a>
+<a href="#"><span class="social_twitter"></span></a>
+<a href="#"><span class="social_linkedin"></span></a>
+<a href="#"><span class="social_pinterest"></span></a>
+</div>
 </div>
 </div>
 </div>
