--- a/discount.html
+++ b/discount.html
@@ -78,15 +78,22 @@
 </div>
 </div>
 <div class="col-lg-10" style="padding-left: 100px;">
-<nav class="header__menu mobile-menu">
+    <nav class="header__menu mobile-menu">
 <ul>
 <li class="active"><a href="./index.html">Home</a></li>
 <li><a href="./about.html">About Us</a></li>
 <li><a href="./services.html">Services</a>
 <ul class="dropdown">
-<li><a href="./about.html">About</a></li>
-<li><a href="./services-details.html">Services Details</a></li>
-<li><a href="./blog-details.html">Blog Details</a></li>
+<li><a href="./about.html">Elderly Transportation</a></li>
+<li><a href="./services-details.html">Bed to Bed Transportation</a></li>
+<li><a href="./blog-details.html">Strecher Transport</a></li>
+<li><a href="./about.html">Non-Emergency Medical Transportation</a></li>
+<li><a href="./about.html">Wheelchair Transportation</a></li>
+<li><a href="./about.html">Special Tips</a></li>
+<li><a href="./about.html">Ambulatory Transport</a></li>
+<li><a href="./about.html">Long Distance Transportation</a></li>
+<li><a href="./about.html">Bariatric Transportation</a></li>
+
 </ul>
 </li>
 <li><a href="#">Testinomials</a>
@@ -97,15 +104,35 @@
 <li><a href="./discount.html">Discounts</a></li>
 <li><a href="#">Service Areas</a>
 <ul class="dropdown">
-<li><a href="./about.html">About</a></li>
-<li><a href="./services-details.html">Services Details</a></li>
-<li><a href="./blog-details.html">Blog Details</a></li>
+<li><a href="./about.html">Ashburn VA</a></li>
+<li><a href="./services-details.html">Dumfries VA</a></li>
+<li><a href="./blog-details.html">Fairfax VA</a></li>
+<li><a href="./blog-details.html">Herndon VA</a></li>
+<li><a href="./blog-details.html">Leesburg VA</a></li>
+<li><a href="./blog-details.html">Manassas VA</a></li>
+<li><a href="./blog-details.html">Sterling VA</a></li>
+<li><a href="./blog-details.html">Alexandria VA</a></li>
+<li><a href="./blog-details.html">Annandale VA</a></li>
+<li><a href="./blog-details.html">Arlington VA</a></li>
+<li><a href="./blog-details.html">Bristow VA</a></li>
+<li><a href="./blog-details.html">Burke VA</a></li>
+<li><a href="./blog-details.html">Centreville VA</a></li>
+<li><a href="./blog-details.html">Chantilly VA</a></li>
+<li><a href="./blog-details.html">Falls Church VA</a></li>
+<li><a href="./blog-details.html">Fredrickburg VA</a></li>
+<li><a href="./blog-details.html">Gainesville VA</a></li>
+<li><a href="./blog-details.html">Mc Lean VA</a></li>
+<li><a href="./blog-details.html">Reston VA</a></li>
+<li><a href="./blog-details.html">Springfield</a></li>
+<li><a href="./blog-details.html">Stafford VA</a></li>
+<li><a href="./blog-details.html">Vienna VA</a></li>
+<li><a href="./blog-details.html">Woodbridge VA</a></li>
 </ul>
 </li>
-<li><a href="./fleet.html">Our Fleet</a></li>
+<!--<li><a href="./fleet.html">Our Fleet</a></li>-->
 <li><a href="./career.html">Career</a></li>
 <li><a href="./contact.html">Booking</a></li>
-<li><a href="#">Brochure</a></li>
+<!--<li><a href="#">Brochure</a></li>-->
 </ul>
 </nav>
 </div>
@@ -116,480 +143,29 @@
 </header>
 
 
-<section class="hero spad set-bg" data-setbg="img/hero1.jpg">
-<div class="container">
-<div class="row">
-<div class="col-lg-6">
-<div class="hero__text">
-<span class="hero__label">Bright Star</span>
-<h2>Fast and Reliable Ambulance Transportation</h2>
-<a href="/services.html" class="primary-btn"><span>View services</span></a>
+<div class="container-fluid">
+  <h2 style="color: orangered;text-align: center;">LIMITED TIME OFFER: PROMOTION DISCOUNTS!</h2>
+  <h4 style="text-align: center;">Call Now to Avail the Exclusive Offer: <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">571-450-1300</a></span></h4>
 </div>
-</div>
-</div>
-</div>
-</section>
+<script>
+  function dialPhoneNumber(phoneNumber) {
+    window.location.href = "tel:" + phoneNumber;
+  }
+</script>
 
-
-<section class="services spad">
-<div class="container">
-<div class="row">
-<div class="col-lg-5 p-0">
-<div class="section-title">
-<span>What We do?</span>
-<h2>Welcome to the Bright Star Transportation, we are the best.</h2>
-</div>
-</div>
-<div class="col-lg-5 offset-lg-2 p-0">
-<div class="services__top__text">
-<p>For more than four decades, Bright Star' world-class Transportation services
-have improved bottom lines across virtually every industry.</p>
-</div>
-</div>
-</div>
-<div class="row">
-<div class="col-lg-3 p-0 order-lg-1">
-<div class="services__item__pic set-bg" data-setbg="img/services/services-1.jpg"></div>
-</div>
-<div class="col-lg-3 p-0 order-lg-2">
-<div class="services__item__text">
-<div class="services__item__icon">
-<img src="img/services/si-1.png" alt="">
-</div>
-<h5>Wheelchair Transport</h5>
-<p>Investment Assets Properties have ready several locations around the world to take your free
-listings for any luxury property you have.</p>
-<a href="#">Read More</a>
-</div>
-</div>
-<div class="col-lg-3 p-0 order-lg-3">
-<div class="services__item__pic set-bg" data-setbg="img/services/services-2.jpg"></div>
-</div>
- <div class="col-lg-3 p-0 order-lg-4">
-<div class="services__item__text">
-<div class="services__item__icon">
-<img src="img/services/si-2.png" alt="">
-</div>
-<h5>Strecher Transport</h5>
-<p>Investment Assets Properties have ready several locations around the world to take your free
-listings for any luxury property you have.</p>
-<a href="#">Read More</a>
-</div>
-</div>
-<div class="col-lg-3 p-0 order-lg-6">
-<div class="services__item__pic set-bg" data-setbg="img/services/services-3.jpg"></div>
-</div>
-<div class="col-lg-3 p-0 order-lg-4 order-lg-5">
-<div class="services__item__text services__item__text--bottom">
-<div class="services__item__icon">
-<img src="img/services/si-3.png" alt="">
-</div>
-<h5>Ambulatory Transport</h5>
-<p>Investment Assets Properties have ready several locations around the world to take your free
-listings for any luxury property you have.</p>
-<a href="#">Read More</a>
-</div>
-</div>
-<div class="col-lg-3 p-0 order-lg-8">
-<div class="services__item__pic set-bg" data-setbg="img/services/services-4.jpg"></div>
-</div>
-<div class="col-lg-3 p-0 order-lg-7">
-<div class="services__item__text services__item__text--bottom">
-<div class="services__item__icon">
-<img src="img/services/si-4.png" alt="">
-</div>
-<h5>Stair-Lifter Chair</h5>
-<p>Investment Assets Properties have ready several locations around the world to take your free
-listings for any luxury property you have.</p>
-<a href="#">Read More</a>
-</div>
-</div>
-</div>
-</div>
-</section>
-
-
-<section class="about spad">
-<div class="container">
-<div class="row">
-<div class="col-lg-12">
-<div class="section-title">
-<span>ABOUT US</span>
-<h2>OUR CLIENTS & COUNTERS</h2>
-</div>
-</div>
-</div>
-<div class="counter__content">
-<div class="row">
-<div class="col-lg-3 col-md-6 col-sm-6">
-<div class="counter__item">
-<img src="img/about/ci-1.png" alt="">
-<div class="counter__item__num">
-<h2 class="c_num">2500</h2>
-</div>
-<h5>Customers Served</h5>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-ut labore et dolore magna aliqua.</p>
-</div>
-</div>
-<div class="col-lg-3 col-md-6 col-sm-6">
-<div class="counter__item">
-<img src="img/about/ci-2.png" alt="">
-<div class="counter__item__num">
-<h2 class="c_num">2023</h2>
-</div>
-<h5>Working Since</h5>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
- ut labore et dolore magna aliqua.</p>
-</div>
-</div>
-<div class="col-lg-3 col-md-6 col-sm-6">
-<div class="counter__item">
-<img src="img/about/ci-3.png" alt="">
-<div class="counter__item__num">
-<h2 class="c_num">4000</h2>
-<strong>+</strong>
-</div>
-<h5>Successfull Trips</h5>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-ut labore et dolore magna aliqua.</p>
-</div>
-</div>
-</div>
-<h5 style="text-align: center;color: orangered;">VA TRANSPORTATION HEALTHCARE PROVIDE MEDICAL TRANSPORT TO MANY HEALTHCARE PROVIDERS!</h5><br>
-<div class="partner__logo">
-<div class="row">
-<div class="col-lg-12">
-<div class="partner__logo__slider owl-carousel">
-<div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-1.png" alt=""></a>
-</div>
-<div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-2.png" alt=""></a>
-</div>
-<div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-3.png" alt=""></a>
-</div>
-<div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-4.JPEG" alt=""></a>
-</div>
-<div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-5.png" alt=""></a>
-</div>
-<div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-6.png" alt=""></a>
-</div>
-<div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-7.png" alt=""></a>
-</div>
-<div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-8.png" alt=""></a>
-</div>
-</div>
-</div>
-</div>
-</div> 
-</div>
-</section>
-
-
-<section class="chooseus spad">
-<div class="container">
-<div class="row">
-<div class="col-lg-6">
-<div class="chooseus__text">
-<div class="section-title">
-<span>Serving Northern VA, Maryland and DC</span>
-<h2>WHY USE OUR NON-EMERGENCY MEDICAL TRANSPORT SERVICE?</h2>
-</div>
-<div class="row">
-<div class="col-lg-6 col-md-6 col-sm-6">
-<div class="chooseus__item">
-<div class="chooseus__item__icon">
-<img src="img/chooseus/ci-1.png" alt="">
-</div>
-<div class="chooseus__item__text">
-<h5>Warehouse Storage</h5>
-<p>Order tendering is an initial stage of the transportation process.</p>
-</div>
-</div>
-</div>
-<div class="col-lg-6 col-md-6 col-sm-6">
-<div class="chooseus__item">
-<div class="chooseus__item__icon">
-<img src="img/chooseus/ci-2.png" alt="">
-</div>
-<div class="chooseus__item__text">
-<h5>Security Cargo</h5>
-<p>While your freight is in transit, a 3PL tracks and manages it.</p>
-</div>
-</div>
-</div>
-<div class="col-lg-6 col-md-6 col-sm-6">
-<div class="chooseus__item">
-<div class="chooseus__item__icon">
-<img src="img/chooseus/ci-3.png" alt="">
-</div>
-<div class="chooseus__item__text">
-<h5>Easy Payment</h5>
-<p>After tendering the load, freight brokers will place your.</p>
-</div>
-</div>
-</div>
-<div class="col-lg-6 col-md-6 col-sm-6">
-<div class="chooseus__item">
-<div class="chooseus__item__icon">
-<img src="img/chooseus/ci-4.png" alt="">
-</div>
-<div class="chooseus__item__text">
-<h5>Fast Delivery</h5>
-<p>Carrier agrees to spot or drop trailers or vehicles at.</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="chooseus__pic set-bg" data-setbg="img/chooseus/chooseus-pic.jpg"></div>
-</div>
-</section>
-
-
-<!--<section class="projects spad">
-<div class="container">
-<div class="row">
-<div class="col-lg-7">
-<div class="section-title">
-<span>Our Projects</span>
-<h2>What We Have Done!</h2>
-</div>
-</div>
-<div class="col-lg-5">
-<div class="projects__all">
-<a href="#" class="primary-btn"><span>View All Projects</span></a>
-</div>
-</div>
-</div>
-<div class="row">
-<div class="projects__slider owl-carousel">
-<div class="col-lg-4">
-<div class="projects__item">
-<div class="projects__item__pic">
-<img src="img/projects/projects-1.jpg" alt="">
-</div>
-<div class="projects__item__text">
-<h5><span>Freight Carrier</span></h5>
-<p>Investment Assets Properties have ready several locations around the world to take
-your free listings for any luxury property you have.</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4">
-<div class="projects__item">
-<div class="projects__item__pic">
-<img src="img/projects/projects-2.jpg" alt="">
- </div>
-<div class="projects__item__text">
-<h5><span>Freight Forwarder</span></h5>
-<p>Investment Assets Properties have ready several locations around the world to take
-your free listings for any luxury property you have.</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4">
-<div class="projects__item">
-<div class="projects__item__pic">
-<img src="img/projects/projects-3.jpg" alt="">
-</div>
-<div class="projects__item__text">
-<h5><span>Import-Export</span></h5>
-<p>Investment Assets Properties have ready several locations around the world to take
-your free listings for any luxury property you have.</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4">
-<div class="projects__item">
-<div class="projects__item__pic">
-<img src="img/projects/projects-4.jpg" alt="">
-</div>
-<div class="projects__item__text">
-<h5><span>Agricultural Truck</span></h5>
-<p>Investment Assets Properties have ready several locations around the world to take
-your free listings for any luxury property you have.</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>-->
-<br>
-
-
-<section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg">
-<div class="container">
-<div class="row">
-<div class="col-lg-12">
-<div class="testimonial__text">
-<div class="section-title">
-<span>Testimonials</span>
-<h2>Our Custormer Reviews</h2>
-</div>
-<div class="testimonial__slider owl-carousel">
-<div class="testimonial__item">
-<img src="img/testimonial/quote.png" alt="">
-<p>“Thank you for taking care of my grandmother for transportation to her doctor’s clinic. Everything went very smoothly..”</p>
-<div class="testimonial__item__author">
-<div class="testimonial__item__author__pic">
-<img src="img/testimonial/ta-1.png" alt="">
-</div>
-<div class="testimonial__item__author__text">
-<h5>Andrew Jacobs</h5>
-<span>January 2021</span>
-</div>
-</div>
-</div>
-<div class="testimonial__item">
-<img src="img/testimonial/quote.png" alt="">
-<p>“I needed to get my mother’s checked up. She cannot walk. I needed custom built vehicle. You guys did a good job. Recommended.”</p>
-<div class="testimonial__item__author">
-<div class="testimonial__item__author__pic">
-<img src="img/testimonial/ta-1.png" alt="">
-</div>
-<div class="testimonial__item__author__text">
-<h5>Smitha Patel</h5>
-<span>June 2021</span>
-</div>
-</div>
-</div>
-<div class="testimonial__item">
-<img src="img/testimonial/quote.png" alt="">
-<p>“Very few people do their work with excellence and compassion. This company is a high value on these things. Highly recommend!”</p>
-<div class="testimonial__item__author">
-<div class="testimonial__item__author__pic">
-<img src="img/testimonial/ta-1.png" alt="">
-</div>
-<div class="testimonial__item__author__text">
-<h5>Don Ward</h5>
-<span>July 2022</span>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!--<div class="col-lg-5 offset-lg-2">
-<div class="request__form">
-<div class="section-title">
-<span>Contacts Us</span>
-<h2>Request A Call Back</h2>
-</div>
-<form action="#">
-<div class="row">
-<div class="col-lg-6 col-md-6 col-sm-6">
-<input type="text" placeholder="Your Name">
-</div>
-<div class="col-lg-6 col-md-6 col-sm-6">
-<input type="text" placeholder="Your Email">
-</div>
-<div class="col-lg-6 col-md-6 col-sm-6">
-<input type="text" placeholder="Your Phone">
-</div>
-<div class="col-lg-6 col-md-6 col-sm-6">
-<select>
-<option value="">Services</option>
-<option value="">Services 1</option>
-</select>
-</div>
-<div class="col-lg-12">
-<textarea placeholder="Message"></textarea>
-<button type="submit" class="site-btn"><span>Submit Now</span></button>
-</div>
-</div>
-</form>
-</div>
-</div>-->
-</div>
-</div>
-</section>
-
-
-<section class="latest spad">
-<div class="container">
-<div class="row">
-<div class="col-lg-12 text-center">
-<div class="section-title">
-<span>Insight and Trends</span>
-<h2>Our Recent Blogs</h2>
-</div>
-</div>
-</div>
-<div class="row">
-<div class="col-lg-4 col-md-6 col-sm-6">
-<div class="latest__item">
-<div class="latest__item__pic set-bg" data-setbg="img/latest/latest-1.jpg">
-<div class="latest__item__pic__inner">
-<div class="label"><span>Guides</span></div>
-<h5>Expert Tips for Managing Hypoglycemia Lorem ipsum dolor</h5>
-</div>
-</div>
-<div class="latest__item__text">
-<ul>
-<li>by <span>Ryan Casey</span></li>
-<li>May 2, 2020</li>
-<li>20 Comment</li>
-</ul>
-<p>If your cat won't stop shredding the toilet paper and urinating on your couch, it could
-be a result</p>
-<a href="#">Read More</a>
- </div>
-</div>
-</div>
-<div class="col-lg-4 col-md-6 col-sm-6">
-<div class="latest__item">
-<div class="latest__item__pic set-bg" data-setbg="img/latest/latest-2.avif">
-<div class="latest__item__pic__inner">
-<div class="label"><span>Guides</span></div>
-<h5>Expert Tips for Managing Hypoglycemia Lorem ipsum dolor</h5>
-</div>
-</div>
-<div class="latest__item__text">
-<ul>
-<li>by <span>Ryan Casey</span></li>
-<li>May 2, 2020</li>
-<li>20 Comment</li>
-</ul>
-<p>If your cat won't stop shredding the toilet paper and urinating on your couch, it could
-be a result</p>
-<a href="#">Read More</a>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-md-6 col-sm-6">
-<div class="latest__item">
-<div class="latest__item__pic set-bg" data-setbg="img/latest/latest-3.avif">
-<div class="latest__item__pic__inner">
-<div class="label"><span>Guides</span></div>
-<h5>Expert Tips for Managing Hypoglycemia Lorem ipsum dolor</h5>
-</div>
-</div>
-<div class="latest__item__text">
-<ul>
-<li>by <span>Ryan Casey</span></li>
-<li>May 2, 2020</li>
-<li>20 Comment</li>
-</ul>
-<p>If your cat won't stop shredding the toilet paper and urinating on your couch, it could
-be a result</p>
-<a href="#">Read More</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
+<div class="container-fluid" style="text-align: center;">
+  <img src="img/discount/discount.png" alt="Our prices">
+</div><br><br>
+<!-- Box -->
+<div class="container-fluid" style="align-items: center;">
+<div class="container-box">
+  <div class="information">
+    <!-- <h2>Product Information</h2> -->
+    <p>Give a call to VA Transportation Healthcare Services for safe and convenient medical/non-medical transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">571-450-1300</a></span> now or book in advance.</p>
+  </div>
+  <button class="button">Book Now</button>
+</div>
+</div><br><br>
 
 
 <footer class="footer">
@@ -651,7 +227,7 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 <div class="col-lg-9 col-md-8">
 <div class="footer__copyright__text">
 
-<p>Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" rel="nofollow noopener">Colorlib</a>
+<p>Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All Rights Reserved<a href="https://colorlib.com" target="_blank" rel="nofollow noopener">Privacy Policy</a> | <a href="https://colorlib.com" target="_blank" rel="nofollow noopener">Refund Policy</a>
 </p>
 
 </div>
